src/objects/Project_Event_Possible_Date__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Hours__c</fullName>
        <label>Event Hours</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Event__c</fullName>
        <label>Project Event</label>
        <referenceTo>Project_Event__c</referenceTo>
        <relationshipLabel>Possible Dates</relationshipLabel>
        <relationshipName>Possible_Dates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Possible</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Possible Date</label>
    <nameField>
        <label>Possible Date Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Possible Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Ordered_Dates</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &gt; End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End date cannot be before the Start date.</errorMessage>
    </validationRules>
</CustomObject>